fixed body and nav-bar clipping

--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@ main {
     width: 65em;
 
     padding: 1em;
-    margin: 8rem auto 1vh auto;
+    margin: 10rem auto 1vh auto;
 
     display: flex;
     flex-direction: column;
